--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0a2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .todo-app {
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
-  to {
-    transform: rotate(360deg);
+  
+
+
+  .todo-form {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
   }
-}
+  
+  .todo-input {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+  }
+  
+  .todo-add-button {
+    background-color: #4caf50; 
+    color: white;
+    border: none;
+    border-radius: 25px;
+    padding: 10px 20px;
+    margin-left: 10px;
+    cursor: pointer;
+  }
+  
+  .todo-add-button:hover {
+    background-color: #45a049; 
+  }
+  
+  .todo-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+  }
+  
+  .todo-checkbox {
+    margin-right: 8px;
+  }
+  
+  .todo-title {
+    flex: 1;
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .todo-edit-button,
+  .todo-delete-button {
+    background-color: #f44336; 
+    color: white;
+    border: none;
+    border-radius: 25px;
+    padding: 5px 10px;
+    margin-left: 8px;
+    cursor: pointer;
+  }
+  
+  .todo-edit-button:hover,
+  .todo-delete-button:hover {
+    background-color: #d32f2f; 
+  }
+  
+  .filter-buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .filter-button {
+    background-color: #2196F3; 
+    color: white;
+    border: none;
+    border-radius: 25px;
+    padding: 8px 16px;
+    margin: 0 4px;
+    cursor: pointer;
+  }
+  
+  .filter-button.active {
+    background-color: #0b7dda; 
+  }
+  
+  .filter-button:hover {
+    background-color: #0a6dbd; 
+  }
+  
